<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="#1c1c1d">

    <TextView
        android:id="@+id/signuptoptext"
        android:layout_width="360dp"
        android:layout_height="61dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:text="@string/create_a_free_account"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/entryName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/entryMail"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryUsername" />

    <EditText
        android:id="@+id/entryName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptoptext" />

    <EditText
        android:id="@+id/entryUsername"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryName" />

    <EditText
        android:id="@+id/entryPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="#574E4E"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryMail" />

    <EditText
        android:id="@+id/entryCPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#919191"
        android:textColorLink="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryPassword"
        android:autofillHints="" />

    <TextView
        android:id="@+id/signupbottomtext"
        android:layout_width="172dp"
        android:layout_height="19dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="70dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <Button
        android:id="@+id/btnToLogin"
        android:layout_width="79dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="91dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signupbottomtext"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="141dp"
        android:layout_height="78dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="65dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/btnToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryCPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>