<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c1c1d">

    <TextView
        android:id="@+id/signuptoptext"
        android:layout_width="360dp"
        android:layout_height="61dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="26dp"
        android:text="@string/log_in_to_dabapath"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/entryMail"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_email1"
        android:inputType="textEmailAddress"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptoptext" />

    <EditText
        android:id="@+id/entryPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="#574E4E"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryMail" />

    <TextView
        android:id="@+id/signupbottomtext"
        android:layout_width="172dp"
        android:layout_height="19dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="71dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnToLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <Button
        android:id="@+id/btnToLogin"
        android:layout_width="79dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="91dp"
        android:text="@string/Sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signupbottomtext"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="140dp"
        android:layout_height="78dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="65dp"
        android:text="@string/Log_in"
        app:layout_constraintBottom_toTopOf="@+id/btnToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>