<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Puzzles"
    android:background="#1c1c1d">


    <Button
        android:id="@+id/button16"
        android:layout_width="337dp"
        android:layout_height="88dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="37dp"
        android:text="@string/puzzle_of_the_day"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/button20"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:text="@string/endgame_puzzles"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button21"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:text="@string/puzzles_random"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button18"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:text="@string/opening_puzzles"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button19"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:text="@string/middle_game_puzzles"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button17"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:text="@string/quot_find_the_mate_quot_puzzles"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="156dp"
        android:layout_height="87dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="643dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="30dp"
        android:onClick="nowHome"
        android:background="@drawable/ic_baseline_home_24"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/ic_baseline_star_border_24"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>